// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Button /> > renders as expected based on provided props 1`] = `
<div>
  <button
    class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-brand tw:text-brand tw:highlight:text-white tw:highlight:bg-brand"
  />
</div>
`;

exports[`<Button /> > renders as expected based on provided props 2`] = `
<div>
  <button
    class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-brand tw:text-brand tw:text-white tw:bg-brand tw:highlight:bg-brand-dark tw:highlight:border-brand-dark tw:highlight:bg-brand"
  />
</div>
`;

exports[`<Button /> > renders as expected based on provided props 3`] = `
<div>
  <button
    class="tw:inline-flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-brand tw:text-brand tw:highlight:text-white tw:highlight:bg-brand"
  />
</div>
`;

exports[`<Button /> > renders as expected based on provided props 4`] = `
<div>
  <button
    class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-brand tw:text-brand tw:pointer-events-none tw:opacity-65"
    disabled=""
  />
</div>
`;

exports[`<Button /> > renders as expected based on provided props 5`] = `
<div>
  <button
    class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-1.5 tw:py-1 tw:text-sm tw:border-brand tw:text-brand tw:highlight:text-white tw:highlight:bg-brand"
  />
</div>
`;

exports[`<Button /> > renders as expected based on provided props 6`] = `
<div>
  <button
    class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-brand tw:text-brand tw:highlight:text-white tw:highlight:bg-brand"
  />
</div>
`;

exports[`<Button /> > renders as expected based on provided props 7`] = `
<div>
  <button
    class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-4 tw:py-2 tw:text-lg tw:border-brand tw:text-brand tw:highlight:text-white tw:highlight:bg-brand"
  />
</div>
`;

exports[`<Button /> > renders as expected based on provided props 8`] = `
<div>
  <button
    class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-brand tw:text-brand tw:highlight:text-white tw:highlight:bg-brand"
  />
</div>
`;

exports[`<Button /> > renders as expected based on provided props 9`] = `
<div>
  <button
    class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-zinc-500 tw:text-zinc-500 tw:highlight:text-white tw:highlight:bg-zinc-500"
  />
</div>
`;

exports[`<Button /> > renders as expected based on provided props 10`] = `
<div>
  <button
    class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring-danger tw:px-3 tw:py-1.5 tw:border-danger tw:text-danger tw:highlight:text-white tw:highlight:bg-danger"
  />
</div>
`;

exports[`<Button /> > renders as expected based on provided props 11`] = `
<div>
  <button
    class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-brand tw:text-brand tw:text-white tw:bg-brand tw:highlight:bg-brand-dark tw:highlight:border-brand-dark tw:highlight:bg-brand"
  />
</div>
`;

exports[`<Button /> > renders as expected based on provided props 12`] = `
<div>
  <button
    class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-zinc-500 tw:text-white tw:bg-zinc-500 tw:highlight:bg-zinc-600 tw:highlight:border-zinc-600 tw:highlight:bg-zinc-500"
  />
</div>
`;

exports[`<Button /> > renders as expected based on provided props 13`] = `
<div>
  <button
    class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring-danger tw:px-3 tw:py-1.5 tw:border-danger tw:text-white tw:bg-danger tw:highlight:bg-danger-dark tw:highlight:border-danger-dark tw:highlight:bg-danger"
  />
</div>
`;

exports[`<Button /> > renders as expected based on provided props 14`] = `
<div>
  <a
    class="tw:flex tw:gap-2 tw:items-center tw:justify-center tw:border tw:rounded-md tw:no-underline tw:transition-colors tw:focus-ring tw:px-3 tw:py-1.5 tw:border-brand tw:text-brand tw:highlight:text-white tw:highlight:bg-brand"
    data-discover="true"
    href="/foo/bar"
  />
</div>
`;
